--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
       >
     </noscript>
     <div id="app"></div>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
